--- a/views/index.html
+++ b/views/index.html
@@ -9,7 +9,7 @@
 </head>
 
 <body>
-    <form action="" method="post">
+    <form action="/api/download" method="POST">
         <div style="margin-top:15%; padding-left: 35%">
             <h2>Download video from YouTube</h2>
             <label for="text">Link fro youtube</label>
