--- a/views/index.html
+++ b/views/index.html
@@ -12,7 +12,7 @@
     <form action="/api/download" method="POST">
         <div style="margin-top:15%; padding-left: 35%">
             <h2>Download video from YouTube</h2>
-            <label for="text">Link from youtube</label>
+            <label for="text">Link fro youtube</label>
             <input type="text" id="url" name="url" style="width:40%" placeholder="Link...">
             <button type="submit">Download</button>
         </div>
